--- a/algorithm.Rmd
+++ b/algorithm.Rmd
@@ -17,7 +17,8 @@ where Ci is the Close price at session i.
 
 #### quantmod -> setSymbolLookup -> getSymbols -> colnames -> T,indicator
 #### -> TTR -> ATR,SMI,ADX,aroon,BBands,chaikinVolatility,EMA,EMV,MACD,MFI,SAR,OHLC
-#### -> HLC(),Cl() -> specifyModel -> modelData -> buildModel ->
+#### -> HLC(),Cl() -> specifyModel -> modelData -> buildModel -> check importance (thredhold)
+#### -> transfer data into data.frame -> F-measure ->
 
 ## Finacial Indicators
 #### ATR - (average true range)
