--- a/algorithm.Rmd
+++ b/algorithm.Rmd
@@ -18,8 +18,10 @@ where Ci is the Close price at session i.
 #### quantmod -> setSymbolLookup -> getSymbols -> colnames -> T,indicator
 #### -> TTR -> ATR,SMI,ADX,aroon,BBands,chaikinVolatility,EMA,EMV,MACD,MFI,SAR,OHLC
 #### -> HLC(),Cl() -> specifyModel -> modelData -> buildModel -> check importance (thredhold)
-#### -> transfer data into data.frame -> F-measure -> ANNs -> normalize data (mean0,sd1)
-#### -> transfer numeric prid into signals
+#### -> transfer data into data.frame -> F-measure -> 
+#### 1. ANNs -> normalize data (mean0,sd1) -> transfer numeric prid into signals -> matrix (precision) ->
+#### 2. SVMs -> 
+
 
 ## Finacial Indicators
 #### ATR - (average true range)
