--- a/algorithm.Rmd
+++ b/algorithm.Rmd
@@ -19,8 +19,9 @@ where Ci is the Close price at session i.
 #### -> TTR -> ATR,SMI,ADX,aroon,BBands,chaikinVolatility,EMA,EMV,MACD,MFI,SAR,OHLC
 #### -> HLC(),Cl() -> specifyModel -> modelData -> buildModel -> check importance (thredhold)
 #### -> transfer data into data.frame -> F-measure -> 
-#### 1. ANNs -> normalize data (mean0,sd1) -> transfer numeric prid into signals -> matrix (precision) ->
-#### 2. SVMs -> 
+#### 1. ANNs -> normalize data (mean0,sd1) -> transfer numeric prid into signals -> matrix (precision)
+#### 2. SVMs -> train -> predict -> matrix (presicision)
+#### 3. MARS -> 
 
 
 ## Finacial Indicators
