--- a/algorithm.Rmd
+++ b/algorithm.Rmd
@@ -21,7 +21,7 @@ where Ci is the Close price at session i.
 #### -> transfer data into data.frame -> F-measure -> 
 #### 1. ANNs -> normalize data (mean0,sd1) -> transfer numeric prid into signals -> matrix (precision)
 #### 2. SVMs -> train -> predict -> matrix (presicision)
-#### 3. MARS -> 
+#### 3. MARS -> train -> predict -> matrix (presicision)
 
 
 ## Finacial Indicators
